// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkout() should return and object with the total and the list of items  1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "name": "Cadeira Gamer Preta",
        "price": 35388,
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "name": "Mouse Gamer",
        "price": 5888,
      },
      "quantity": 1,
    },
  ],
  "total": Object {
    "amount": 182828,
    "currency": "USD",
    "precision": 2,
  },
}
`;

exports[`checkout() should return and object with the total and the list of items when summary() is called 1`] = `
Object {
  "formatted": "$1,828.28",
  "items": Array [
    Object {
      "product": Object {
        "name": "Cadeira Gamer Preta",
        "price": 35388,
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "name": "Mouse Gamer",
        "price": 5888,
      },
      "quantity": 1,
    },
  ],
  "total": Object {
    "amount": 182828,
    "currency": "USD",
    "precision": 2,
  },
}
`;
